"creating components in different files"

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,16 @@
 .heading{
-    color: red;
+    font-size: 60px;
+    font-weight: bold;
+    border-bottom: 5px solid black;
 }
 .kebab-img{
-  height: 100px;
-  width: 100px;
-  border-radius: 25px;
-  margin-left: 10px;
-  margin-right: 10px;
+    height: 100px;
+    width: 100px;
+    border-radius: 25px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 .cat-img {
-  height: 100px;
-  width: 100px;
+   height: 100px;
+    width: 100px;
 }
